--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,12 @@
 <form action="" method="POST">
   {{ form.hidden_tag() }}
   <p>
-    {{ form.email.label }}
+    {{ form.email.label }}:
     {{ form.email(size=32) }}
   </p>
 
   <p>
-    {{ form.password.label }}
+    {{ form.password.label }}:
     {{ form.password(size=32) }}
   </p>
 
