--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% block head %}
   <meta charset="UTF-8">
   <title>Flask Survey</title>
 
   <link rel="stylesheet" href="{{ url_for('static', filename='jquery-ui.min.css') }}">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  {% endblock %}
+
+  <link rel="stylesheet" href="{{ url_for('static', filename='survey_question.css') }}">
 </head>
 <body>
   <div class="container-fluid">
