--- a/templates/survey_question.html
+++ b/templates/survey_question.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %}
-{% block head %}
-<link rel="stylesheet" href="{{ url_for('static', filename='survey_question.css') }}">
-{% endblock %}
 
 {% block body %}
 
   <div class="col-md-12">
+    <h2>{{ survey.survey_title }}</h2>
+
     {% for q in question %}
-      <h2>{{ q.question }}</h2>
+      <h3>{{ q.question }}</h3>
     {% endfor %}
 
-    <form action="{{ url_for('submit') }}" method="POST" class="answers_form">
+    <form action="{{ url_for('submit') }}" method="POST" class="">
+    <div class="answers_form">
       {{ form.hidden_tag() }}
 
       {% if errors %}
@@ -25,10 +25,11 @@
         <label class="radio_btn">{{ x.data }}</label>
       </div>
       {% endfor %}
+    </div>
 
       <div class="nav_buttons">
         {% if prev_url %}
-          <a href="{{ prev_url }}" class="btn btn-info pull-left">Back</a>
+          <a href="{{ prev_url }}" class="btn btn-default pull-left">Back</a>
         {% else %}
           <a href="{{ url_for('home') }}" class="btn btn-default pull-left">Back</a>
         {% endif %}
@@ -36,7 +37,7 @@
         {% if next_url %}
           <input type="submit" class="btn btn-info pull-right" value="Next">
         {% else %}
-          <a href="#" class="btn btn-success">Finish</a>
+          <input type="submit" class="btn btn-info pull-right" value="Complete">
         {% endif %}
       </div>
     </form>
